Show charts and changes
+ refactored imort of player data
+ fixed some UI glitches